--- a/skins/moono/editor_ie.css
+++ b/skins/moono/editor_ie.css
@@ -25,14 +25,10 @@ This file contains styles to used by all versions of Internet Explorer only.
 	filter: alpha(opacity = 100);
 }
 
-.cke_combo_inlinelabel
+.cke_combo_disabled .cke_combo_inlinelabel,
+.cke_combo_disabled .cke_combo_open
 {
-	filter: alpha(opacity = 70);
-}
-
-a.cke_combo_button:hover .cke_combo_inlinelabel
-{
-	filter: alpha(opacity = 100);
+	filter: alpha(opacity = 30);
 }
 
 .cke_toolbox_collapser
