--- a/skins/moono/richcombo.css
+++ b/skins/moono/richcombo.css
@@ -88,8 +88,8 @@ The visual representation of a rich combo widget looks as follows:
 }
 
 /* Different states of the container. */
-a.cke_combo_button:hover,
-a.cke_combo_button:focus
+.cke_combo_off a.cke_combo_button:hover,
+.cke_combo_off a.cke_combo_button:focus
 {
 	background: #ccc;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#ccc));
@@ -99,10 +99,12 @@ a.cke_combo_button:focus
 	background-image: -ms-linear-gradient(top, #f2f2f2, #ccc);
 	background-image: linear-gradient(top, #f2f2f2, #ccc);
 	filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#fff2f2f2', endColorstr='#ffcccccc');
+
+	outline: none;
 }
 
-a.cke_combo_button:active,
-.cke_combo.cke_on a.cke_combo_button
+.cke_combo_off a.cke_combo_button:active,
+.cke_combo_on a.cke_combo_button
 {
 	border: 1px solid #777;
 
@@ -118,6 +120,15 @@ a.cke_combo_button:active,
 	background-image: -ms-linear-gradient(top, #aaa, #cacaca);
 	background-image: linear-gradient(top, #aaa, #cacaca);
 	filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#ffaaaaaa', endColorstr='#ffcacaca');
+}
+
+.cke_combo_on a.cke_combo_button:hover,
+.cke_combo_on a.cke_combo_button:focus,
+.cke_combo_on a.cke_combo_button:active
+{
+	-moz-box-shadow: 0 1px 6px rgba(0,0,0,.7) inset, 0 1px 0 rgba(0,0,0,.2);
+	-webkit-box-shadow: 0 1px 6px rgba(0,0,0,.7) inset, 0 1px 0 rgba(0,0,0,.2);
+	box-shadow: 0 1px 6px rgba(0,0,0,.7) inset, 0 1px 0 rgba(0,0,0,.2);
 }
 
 .cke_rtl .cke_combo_button
@@ -197,4 +208,11 @@ a.cke_combo_button:active,
 	width: auto;
 	border: 0;
 	margin-top: 3px;
+}
+
+/* Disabled combo button styles. */
+.cke_combo_disabled .cke_combo_inlinelabel,
+.cke_combo_disabled .cke_combo_open
+{
+	opacity: 0.3;
 }
